[tool.poetry]
name = "abteim"
version = "0.2.4"
description = ""
authors = ["dermatty <stephan@untergrabner.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fridagram = "^0.1.15"
toml = "^0.10.2"
importlib = "^1.0.4"

[tool.poetry.scripts]
abteim = "abteim.abteim:start"

[[tool.poetry.source]]
name = "etec"
url = "http://etec.iv.at:8123"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
